[package]
name = "cobul"
license = "MIT"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["form", "props", "core", "icons", "extra", "test"]

[features]
default = ["core", "props"]

form = ["cobul_form"]
props = ["cobul_props"]
core = ["cobul_core"]
extra = ["cobul_extra"]
icons = ["cobul_icons"]

[dependencies]
cobul_form = { path = "form", optional = true }
cobul_props = { path = "props", optional = true }
cobul_core = { path = "core", optional = true}
cobul_extra = { path = "extra", optional = true }
cobul_icons = { path = "icons", optional = true }



