[package]
name = "cobul"
license = "MIT"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["simple", "props", "core", "icons", "extra", "test", "derive", "form", "model"]

[features]
default = ["core"]

simple = ["cobul_simple", "cobul_core", "cobul_props", "cobul_model"]
props = ["cobul_props"]
core = ["cobul_core", "cobul_props", "cobul_model"]
extra = ["cobul_extra", "cobul_core", "cobul_props", "cobul_model"]
icons = ["cobul_icons"]
model = ["cobul_model"]
form = ["cobul_form", "cobul_model"]
derive = ["cobul_derive", "cobul_form", "cobul_props"]

[dependencies]
cobul_simple = { path = "simple", optional = true }
cobul_props = { path = "props", optional = true }
cobul_core = { path = "core", optional = true }
cobul_extra = { path = "extra", optional = true }
cobul_icons = { path = "icons", optional = true }
cobul_derive = { path = "derive", optional = true }
cobul_form = { path = "form", optional = true }
cobul_model = { path = "model", optional = true }



