[package]
name = "base"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"
description = "Bulma components for Yew"
repository = "https://github.com/tdooms/cobul"
license = "GNU GPLv3"

[dependencies]
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "36058d455ce8d068416527836a9aa18afa7b7dee" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "36058d455ce8d068416527836a9aa18afa7b7dee" }

web-sys = "0.3"
strum = { version = "0.21", features = ["derive"] }
derive_more = "*"
