[package]
name = "base"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2021"
description = "Bulma components for Yew"
repository = "https://github.com/tdooms/cobul"
license = "GNU GPLv3"

[dependencies]
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
hooks = { path = "../hooks" }

web-sys = "0.3"
strum = { version = "0.24", features = ["derive"] }
derive_more = "*"
