[package]
name = "cobul_base"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2021"
description = "Bulma components for Yew"
repository = "https://github.com/tdooms/cobul"
license = "GNU GPLv3"

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }

log = "0.4"
web-sys = "^0.3.59"
strum = { version = "0.24", features = ["derive"] }
derive_more = "*"
