[package]
name = "cobul_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobul_raw = { path = "../raw" }
cobul_props = { path = "../props" }
cobul_icons = { path = "../icons" }

log = "0.4"
strum = { version = "0.25", features = ["derive"] }
yew = "0.20"
validator = "0.16"