[package]
name = "cobul_core"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2021"
description = "Bulma components for Yew"
repository = "https://github.com/tdooms/cobul"
license = "GNU GPLv3"

[dependencies]
cobul_props = { path = "../props" }
yew = "0.21"

log = "0.4"
web-sys = "^0.3.59"
implicit-clone = "0.4"
strum = { version = "0.25", features = ["derive"] }
rand = "0.8.5"

