[package]
name = "custom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "36058d455ce8d068416527836a9aa18afa7b7dee" }

web-sys = "0.3"
strum = { version = "0.21", features = ["derive"] }
derive_more = "*"
num = "0.4"