[package]
name = "cobul_extensions"
version = "0.1.0"
edition = "2021"

[dependencies]
cobul_base = { path = "../base" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }
derive_more = "0.99"
num = "0.4"
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "^0.3.59", features = ["HtmlInputElement", "HtmlOutputElement", "HtmlDivElement"] }