[package]
name = "cobul_extensions"
version = "0.1.0"
edition = "2021"

[dependencies]
cobul_base = { path = "../base" }
yew = "0.20"
derive_more = "0.99"
num = "0.4"
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "^0.3.59", features = ["HtmlInputElement", "HtmlOutputElement", "HtmlDivElement"] }