[package]
name = "cobul_form"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21"
cobul_props = { path = "../props" }
implicit-clone = { version = "0.4", features = ["serde"] }
validator = { git = "https://github.com/tdooms/validator.git" }
