[package]
name = "forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }

validator = { version = "0.16", features = ["derive"] }
wasm-bindgen-futures = "0.4"
log = "0.4"