[package]
name = "cobul_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobul_base = { path = "../base" }
cobul_fa = { path = "../fa" }

log = "0.4"
strum = { version = "0.24", features = ["derive"] }
yew = "0.20"