[package]
name = "cobul_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobul_core = { path = "../core" }
cobul_props = { path = "../props" }
cobul_icons = { path = "../icons" }
cobul_model = { path = "../model" }

log = "0.4"
strum = { version = "0.26", features = ["derive"] }
yew = "0.21"
validator = "0.16"