[package]
name = "slider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
web-sys = { version = "0.3", features = ["HtmlInputElement", "InputEvent", "HtmlDivElement", "HtmlOutputElement"] }
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
num = "0.4"
log = "0.4"

