[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c", features = ["csr"] }
cobul = { path = "..", features = ["fa", "simple", "extensions"] }
gloo-timers = "0.2"

wasm-bindgen = "0.2"
derive_more = "0.99.16"
strum = { version = "0.24", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }

log = "0.4"
wasm-logger = "0.2"