[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
cobul = { path = "..", features = ["extra"] }
gloo-timers = "0.3"

wasm-bindgen = "0.2"
derive_more = "0.99.16"
strum = { version = "0.25", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }

log = "0.4"
wasm-logger = "0.2"